--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -1,3 +1,7 @@
 .Header{
-    height: 47px;
+    height: 60px;
+    background-color: rgba(0, 0, 0, 0.86);
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
 }
