--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -1,7 +1,22 @@
 .Header{
     height: 60px;
-    background-color: rgba(0, 0, 0, 0.86);
+    background-color: #39455a;
     display: flex;
     align-items: center;
     justify-content: space-around;
+    position: fixed;
+    width: 100%;
+    box-shadow: 0px 1px 5px black;
+}
+.Header a{
+    text-decoration: none;
+    color: white;
+    font-size: 15px;
+}
+.Header a:hover{
+    text-decoration: underline;
+}
+.Header a[class="active"]{
+    text-decoration: underline;
+    color: orange;
 }
