--- a/src/Components/MoviesListCard/card.module.css
+++ b/src/Components/MoviesListCard/card.module.css
@@ -8,6 +8,10 @@
     border-radius: 5px;
 
 }
+
+.card:hover{
+    background-color: #7e7e7e;
+}
 .card a{
     text-decoration: none;
     color: #ffffff;
