--- a/src/Components/MoviesListCard/card.module.css
+++ b/src/Components/MoviesListCard/card.module.css
@@ -1,26 +1,30 @@
-.card{
+.card {
     width: 17%;
     margin-top: 20px;
     margin-right: 8px;
     display: flex;
     flex-direction: column;
-    background-color: rgba(0, 0, 0, 0.56);
+    background-color: rgba(146, 144, 144, 0.45);
     border-radius: 5px;
 
 }
 
-.card:hover{
-    background-color: #7e7e7e;
+.card:hover {
+    background-color: gray;
 }
-.card a{
+
+.card a {
     text-decoration: none;
     color: #ffffff;
     font-size: 15px;
 }
-.card p{
 
+.card p {
+    color: white;
+    font-weight: bold;
 }
-.inner{
+
+.inner {
     display: flex;
     flex-direction: column;
     align-items: center;
