--- a/src/Components/UserInfo/user.css
+++ b/src/Components/UserInfo/user.css
@@ -1,6 +1,10 @@
 .user{
-    background-color: orangered;
+    background-color: #c8c3c3;
     border-radius: 100px;
     width: 50px;
     height:50px;
+    color: #09041b;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
