--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,35 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html[data-theme='dark']{
+  --header-bg-color:  #09041b;
+  --header-shadow: 0px 1px 5px #371028;
+  --link-color: #ffffff;
+  --link-color-hover: #FFA500FF;
+
+  --app-bg: url(images/dark.jpg);
+
+  --card-movie-bg:rgba(146, 144, 144, 0.45);
+  --card-movie-bg-hover:0px 1px 5px #ffffff;
+
+  --text-info:white;
+}
+
+html[data-theme='light']{
+  --header-shadow: 0px 1px 5px #000000;
+  --header-bg-color-img:  url('images/img_1.png');
+  --opacity:0.7;
+  --link-color: white;
+  --link-color-hover: #FFA500FF;
+  --button-header: black;
+  --app-bg: #1f1b1b;
+
+  --card-movie-bg: rgb(164, 219, 252);
+  --card-movie-bg-hover: 0px 1px 5px #371028;
+
+  --text-info: black;
+
+  --chip-border:orange;
 }
