--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,7 @@
 .App {
   text-align: center;
   background-image: var(--app-bg);
-  /*background-color: #3a455c;*/
-  background-size: contain;
-  background-position: bottom right;
+  min-height: 600px;
 }
 ::-webkit-scrollbar {
   display: none;
