--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@ html[data-theme='light']{
   --button-header: black;
   --app-bg: #1f1b1b;
 
-  --card-movie-bg: rgb(164, 219, 252);
+  --card-movie-bg: rgba(160, 207, 255, 0.95);
   --card-movie-bg-hover: 0px 1px 5px #371028;
 
   --text-info: black;
