--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
   text-align: center;
   background-image: var(--app-bg);
-  min-height: 600px;
+  min-height: 100vh;
 }
 ::-webkit-scrollbar {
   display: none;
